[workspace]
members = [
    "chain/client-primitives",
    "chain/jsonrpc-primitives",
    "core/account-id",
    "core/chain-configs",
    "core/crypto",
    "core/primitives",
    "tools/rpctypegen/core",
    "tools/rpctypegen/macro",
    "utils/stdx",
]

[workspace.metadata.workspaces]
version = "0.15.0"
exclude = ["neard"]

[workspace.dependencies]
anyhow = "1.0.62"
arbitrary = { version = "1", features = ["derive"] }
assert_matches = "1.5.0"
atty = "0.2"
base64 = "0.13"
bencher = "0.1.5"
blake2 = "0.9.1"
bolero = "0.6.2"
borsh = { version = "0.9", features = ["rc"] }
bs58 = "0.4"
byteorder = "1.3"
bytesize = { version = "1.1", features = ["serde"] }
c2-chacha = "0.3"
cfg-if = "1"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.1.6", features = ["derive", "env"] }
curve25519-dalek = "3"
derive_more = "0.99.9"
easy-ext = "0.2"
ed25519-dalek = "1"
enum-map = "2.1.0"
fs2 = "0.4"
getrandom = { version = "0.2.8", features = ["js"] }
hex = { version = "0.4.2", features = ["serde"] }
insta = "1.14.0"
num-rational = { version = "0.3.1", features = ["serde"] }
once_cell = "1.13.1"
primitive-types = { version = "0.10", default-features = false }
quote = "1.0"
rand = "0.8.5"
reed-solomon-erasure = "4"
serde = { version = "1.0.136", features = ["alloc", "derive", "rc"] }
serde_json = "1.0.68"
serde_repr = "0.1.8"
sha2 = "0.10"
smart-default = "0.6"
strum = { version = "0.24", features = ["derive"] }
subtle = "2.2"
syn = { version = "1.0.54", features = ["extra-traits", "full"] }
tempfile = "3.3"
thiserror = "1.0.30"
tracing = { version = "0.1.36", features = ["std"] }
stdx = { package = "near-stdx", path = "utils/stdx" }

[patch.crates-io]

# Note that "bench" profile inherits from "release" profile and
# "test" profile inherits from "dev" profile.
# https://doc.rust-lang.org/cargo/reference/profiles.html#test

[profile.dev]
panic = 'abort'

[profile.release]
overflow-checks = true
panic = 'abort'
lto = "fat"
codegen-units = 1

# A much faster to compile version of `release`.
[profile.quick-release]
inherits = "release"
lto = false
codegen-units = 16


# Compile some dependencies with optimizations to speed up tests.
[profile.dev.package.hex]
opt-level = 3
[profile.dev.package.rand]
opt-level = 3
[profile.dev.package.bs58]
opt-level = 3
[profile.dev.package.sha2]
opt-level = 3

[workspace.package]
edition = "2021"
authors = ["Near Inc <hello@nearprotocol.com>"]
rust-version = "1.65.0"
